deployment/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ppt-rsd-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: ppt.bottlepeace.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ppt-rsd-frontend
            port:
              number: 80
  - host: api.ppt.bottlepeace.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ppt-rsd-backend
            port:
              number: 8000
