deployment/kubernetes/service-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: ppt-rsd-backend
  namespace: default
spec:
  selector:
    app: ppt-rsd-backend
  ports:
  - port: 8000
    targetPort: 8000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ppt-rsd-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: api.ppt.bottlepeace.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ppt-rsd-backend
            port:
              number: 8000
